_etc/05.INGRESS-example/hyperauth-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hyperauth
  namespace: api-gateway-system
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: https
    traefik.ingress.kubernetes.io/service.serverstransport: insecure@file # ca 인증서 공유를 안했을 때
#    traefik.ingress.kubernetes.io/service.passhostheader: "true"
spec:
  externalName: hyperauth.org
  ports:
    - port: 443
      protocol: TCP
      targetPort: https
      name: https # name 필수
  type: ExternalName
