_etc/05.INGRESS-example/backend-https-hypercloud-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    ingress.tmaxcloud.org/ingress: hypercloud
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: jwt-decode-auth@file
  name: hypercloud-ingress
  namespace: hypercloud5-system
spec:
  ingressClassName: tmax-cloud  #ingressclass는 `tmax-cloud`로 지정
  rules:
    - host: hypercloud.tmaxcloud.org
      http:
        paths:
          - backend:
              service:
                name: hypercloud5-api-server-ingress-service-for-gateway
                port:
#                  number: 433
                  name: https
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - hypercloud.tmaxcloud.org
#      secretName: tmaxcloud-org
